# IRYoloTracker

./: .gitignore  README.md  example_infrared_video.py  pyproject.toml
configs/: ir_marker_dataset.yaml  pseudo_ir_marker_dataset.yaml  yolo_low_conf_ir_marker_dataset.yaml
ir_yolo_tracker/: __init__.py  api.py  detections.py  heuristics.py  io.py  model_assets.py  preprocessing.py  tracker.py  visualization.py  yolo_format.py
ir_yolo_tracker/models/: __init__.py
scripts/: bootstrap_pseudo_dataset.py  build_dataset.py  detect_npy.py  train.py
tests/: test_api.py  test_example_infrared_video.py  test_preprocessing.py  test_tracker.py  test_visualization.py  test_yolo_format.py
