[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-yolo-tracker"
version = "0.1.1"
description = "YOLO-based detection of bright infrared marker balls in uint16 frames."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "GGN_2015" },
]
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.0",
    "tqdm>=4.0",
    "ultralytics>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["ir_yolo_tracker*"]

[tool.setuptools.package-data]
ir_yolo_tracker = ["models/*.pt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
